<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellowBackground">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/main_constraint_todo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorYellowBackground">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/dustismo_bold"
            android:gravity="center"
            android:text="@string/to_do"
            android:textSize="40dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_todo_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/dustismo_bold"
            android:gravity="center"
            android:textSize="40dip"
            tools:text="20 November 2020"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_todo_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_todo_date_text_view" />

        <Button
            android:id="@+id/main_todo_button_delete"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorYellowLight"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/delete_done"
            android:textAllCaps="false"
            android:textColor="@color/colorYellowDark"
            android:textSize="28dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_todo_recycler_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/main_constraint_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorYellowBackground">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal"
            android:weightSum="82"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:text="@string/monday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:text="@string/thursday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:text="@string/friday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:text="@string/saturday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="@color/colorRed"
                android:textSize="18dip" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/month_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>